# opencitadel

./: .env.example  .gitignore  DEPLOYMENT.md  HTTPS_DOMAIN_SETUP.md  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  README.zh-CN.md  alembic.ini  config.yaml  migrate.sh  pyproject.toml  pytest.ini  requirements.txt  worker.sh
api/alembic/: env.py
api/alembic/versions/: a1b2c3d4e5f6_add_models_skills_memory.py  a1b2c3d4e5f7_operator_domains_gate_profile.py  a7b8c9d0e1f2_add_memory_embedding_vector_index.py  aa01_audit_hash_chain.py  b2c3d4e5f6a7_add_sessions_thinking_enabled.py  b2c3d4e5f6g8_scheduled_job_operator_fields.py  b8c9d0e1f2a3_create_session_events.py  c3d4e5f6a7b8_add_llm_models_supports_multimodal.py  c9d0e1f2a3b4_add_sessions_pending_phase.py  cc02joberr_scheduled_job_last_run_error.py  d0e1f2a3b4c5_add_session_memory_performance_indexes.py  d4e5f6a7b8c9_add_llm_models_capabilities.py  dd01_config_management_tables.py  dd02_mcp_global_name_unique.py  dd03_mcp_url_encryption.py  e5f6a7b8c9d0_add_memory_embedding_pgvector.py  ee04skillprompts_add_skill_progressive_columns.py  f6a7b8c9d0e1_create_llm_token_usages.py  ff01llmendpoints_add_llm_endpoints.py  g7h8i9j0k1l2_create_session_checkpoints.py  (+21 more)
api/app/: container.py  main.py  migrate.py  migrate_app_config_seed.py  migrate_llm_api_keys.py  migrate_mcp_a2a_from_blob.py  migrate_mcp_url_and_secrets.py  migrate_storage.py  runtime_role.py
api/core/: config.py
api/scripts/: eval_multimodal.py
api/tests/: conftest.py
(+963 files in other folders)
