[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "cos-python-sdk-v5>=1.9.38",
    "cryptography>=44.0.0",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "filelock>=3.20.0",
    "httpx>=0.28.1",
    "json-repair>=0.53.0",
    "markdownify>=1.2.2",
    "mcp>=1.22.0",
    "openai>=1.107.2",
    "pillow>=11.0.0",
    "pypdf>=5.0.0",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "pymupdf>=1.27.2.3",
    "pgvector>=0.3.6",
    "pdf2docx>=0.5.13",
    "python-docx>=1.2.0",
    "markdown>=3.10.2",
    "dependency-injector>=4.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
